fixup: s/Collections.singleton/Set.of/